theme_kommit - correct admin login toggle on iOS, optimize CSS
Related to-do: KSL: correct usermenu for small screens
https://3.basecamp.com/3304540/buckets/676070/todos/373393126#__recording_374671139

--- a/theme/kommit/style/theme.css
+++ b/theme/kommit/style/theme.css
@@ -395,7 +395,7 @@ h6 {
     margin: 0;
     right: 86px;
     position: absolute;
-    top: 8px;
+    top: 1px;
   }
 }
 @media all and (max-width: 767px) {
